[package]
name = "gutter"
version = "0.1.0"
edition = "2024"

[lib]
name = "gutter"
path = "src/lib.rs"

[[bin]]
name = "gutter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
crossterm = "0.29"
dirs = "6.0"
globset = "0.4"
ignore = "0.4"
ratatui = "0.29"
regex = "1.12"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.3"
toml = "0.9"

[dev-dependencies]
tempfile = "3.23"
